syntax = "proto3";

package message;

option go_package = "grpc-go/proto;pb";

message RequestMessage {
  string name = 1;
}

message ResponseMessage {
  bytes content = 1;
}

service MessageService {
  rpc SayHello (RequestMessage) returns (stream ResponseMessage);
}
